generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "./schema.dbml"
}

model User {
  id             String           @id @default(uuid())
  name           String
  email          String           @unique
  password       String
  phone          String
  createdAt      DateTime         @default(now()) @map("created_at")
  updatedAt      DateTime         @updatedAt @map("updated_at")

  companyHistory CompanyHistory[] @relation("CompanyHistoryRel")
  orgHistory     OrgHistory[]     @relation("OrgHistoryRel")
  userAccesses   UserAccess[]
  userActivities UserActivity[]
  userHistory    UserHistory[]    @relation("UserHistoryRel")
  managedUsers   UserMapping[]    @relation("ReportingManager")
  userMappings   UserMapping[]    @relation("UserMappings")
  workflowHistories WorkflowReqHistory[] @relation("WorkflowHistoryRel")


  @@map("user")
}

model Company {
  id               String            @id @default(uuid())
  gstNumber        String?           @map("gst_number")
  legalName        String            @map("legal_name")
  address          String
  status           Status
  registrationDate DateTime          @map("registration_date")
  brandName        String?           @map("brand_name")
  ieCode           String?           @map("ie_code")
  companyCode      String            @unique @map("company_code")
  createdAt        DateTime          @default(now()) @map("created_at")
  updatedAt        DateTime          @updatedAt @map("updated_at")

  companyMappings  CompanyMapping[]
  orgStructures    OrgStructure[]
  orgStructureReqs OrgStructureReq[]
  userAccesses     UserAccess[]
  userMappings     UserMapping[]
  workflows         Workflow[]
  workflowReqs      WorkflowReq[]
  userHistories    UserHistory[]    @relation("CompanyHistoryRel")
  userOnboardings  UserOnboarding[] @relation("UserOnboardingRel")
  orgHistories    OrgHistory[]     @relation("OrgHistoryRel")
  workflowReqHistories WorkflowReqHistory[] @relation("WorkflowRequestHistory")


  @@map("company")
}

model GroupCompany {
  id              String           @id @default(uuid())
  name            String
  status          Status
  groupCode       String           @unique @map("group_code")
  remarks         String?
  createdAt       DateTime         @default(now()) @map("created_at")
  updatedAt       DateTime         @updatedAt @map("updated_at")

  companyMappings CompanyMapping[]
  userOnboardings UserOnboarding[] @relation("UserOnboardingRel")

  @@map("group_company")
}

model UserHistory {
  id          String    @id @default(uuid())
  email       String
  companyId   String    @map("company_id")
  reqId       String?   @map("req_id")
  level       Int?
  event       EventType
  eventUserId String    @map("event_user_id")
  createdAt   DateTime  @default(now()) @map("created_at")
  user        User      @relation("UserHistoryRel", fields: [eventUserId], references: [id])
  company     Company   @relation("CompanyHistoryRel", fields: [companyId], references: [id])

  @@map("user_history")
}

model CompanyHistory {
  id          String    @id @default(uuid())
  companyCode String    @map("company_code")
  event       EventType
  eventUserId String    @map("event_user_id")
  createdAt   DateTime  @default(now()) @map("created_at")
  user        User      @relation("CompanyHistoryRel", fields: [eventUserId], references: [id])

  @@map("company_history")
}

model UserMapping {
  id               String   @id @default(uuid())
  userId           String   @map("user_id")
  companyId        String   @map("company_id")
  reportingManager String?  @map("reporting_manager")
  status           Status
  designation      String?
  employeeId       String?   @map("employee_id")
  createdAt        DateTime @default(now()) @map("created_at")
  updatedAt        DateTime @updatedAt @map("updated_at")
  company          Company  @relation(fields: [companyId], references: [id])
  manager          User?    @relation("ReportingManager", fields: [reportingManager], references: [id])
  user             User     @relation("UserMappings", fields: [userId], references: [id])
 
  @@unique([userId, companyId])
  @@map("user_mapping")
}

model CompanyMapping {
  id        String       @id @default(uuid())
  companyId String       @map("company_id")
  groupId   String       @map("group_id")
  createdAt DateTime     @default(now()) @map("created_at")
  updatedAt DateTime     @updatedAt @map("updated_at")

  company   Company      @relation(fields: [companyId], references: [id])
  group     GroupCompany @relation(fields: [groupId], references: [id])

  @@unique([groupId, companyId])
  @@map("company_mapping")
}

model UserActivity {
  id            String    @id @default(uuid())
  userId        String    @map("user_id")
  companyId     String    @map("company_id") 
  refreshToken  String?   @map("refresh_token")
  version       String?
  ipAddress     String    @map("ip_address")
  userAgent     String    @map("user_agent")
  forceLogToken String?   @map("force_log_token")
  expiryAt      DateTime? @map("expiry_at")
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")

  user          User      @relation(fields: [userId], references: [id])

  @@unique([userId, companyId])   
  @@map("user_activity")
}

model UserOnboarding {
  id                String           @id @default(uuid())
  groupId           String?          @map("group_id")
  companyId         String           @map("company_id")
  workflowId        String?          @map("workflow_id")
  data              Json
  status            OnboardingStatus @default(PENDING)
  createdAt         DateTime         @default(now()) @map("created_at")
  updatedAt         DateTime         @updatedAt @map("updated_at")
  approvalRemark    String?          @map("approval_remark")
  eligibleApprovers String[]         @default([]) @map("eligible_approvers")
  company           Company          @relation("UserOnboardingRel", fields: [companyId], references: [id])
  group             GroupCompany?    @relation("UserOnboardingRel", fields: [groupId], references: [id])

  @@map("user_onboarding")
}

model CompanyOnboarding {
  id             String           @id @default(uuid())
  data           Json?
  groupCode      String?          @map("group_code")
  companyCode    String           @unique @map("company_code")
  onboardedType  OnboardedType    @default(NEW) @map("onboarded_type")
  status         OnboardingStatus @default(PENDING)
  createdAt      DateTime         @default(now()) @map("created_at")
  updatedAt      DateTime         @updatedAt @map("updated_at")
  approvalRemark String?          @map("approval_remark")
  eligibleApprovers   String[]         @default([]) @map("eligible_approvers")

  @@map("company_onboarding")
}

model OrgStructureReq {
  id                String           @id @default(uuid())
  data              Json
  companyId         String           @map("company_id")
  workflowId        String?          @map("workflow_id")
  status            OnboardingStatus @default(PENDING)
  createdAt         DateTime         @default(now()) @map("created_at")
  remarks           String?
  updatedAt         DateTime         @updatedAt @map("updated_at")
  eligibleApprovers String[]         @default([]) @map("eligible_approvers")
  orgHistories      OrgHistory[]     @relation("OrgRequestHistory")
  company           Company          @relation(fields: [companyId], references: [id])

  @@map("org_structure_req")
}

model OrgHistory {
  id          String          @id @default(uuid())
  orgReqId    String          @map("org_req_id")
  companyId   String          @map("company_id")
  level       Int?
  event       EventType
  eventUserId String          @map("event_user_id")
  createdAt   DateTime        @default(now()) @map("created_at")
  user        User            @relation("OrgHistoryRel", fields: [eventUserId], references: [id])
  orgReq      OrgStructureReq @relation("OrgRequestHistory", fields: [orgReqId], references: [id])
  company     Company         @relation("OrgHistoryRel", fields: [companyId], references: [id])

  @@map("org_history")
}


model OrgStructure {
  id         String         @id @default(uuid())
  companyId  String         @map("company_id")
  nodePath   String         @unique @map("node_path")
  nodeName   String         @map("node_name")
  nodeType   NodeType       @map("node_type")
  parentId   String?        @map("parent_id")
  createdAt  DateTime       @default(now()) @map("created_at")
  company    Company        @relation(fields: [companyId], references: [id])
  parent     OrgStructure?  @relation("ParentChild", fields: [parentId], references: [id])
  children   OrgStructure[] @relation("ParentChild")
  userAccess UserAccess[]

  workflows Workflow[]

  @@map("org_structure")
}


model Roles {
  roleCode        String       @id @map("role_code")
  roleName        String       @unique @map("role_name")
  category        String
  subCategory     String       @map("sub_category")
  permissionLevel String?      @map("permission_level")
  view            Boolean      @default(false)
  modify          Boolean      @default(false)
  approve         Boolean      @default(false)
  initiate        Boolean      @default(false)
  isActive        Boolean      @default(true) @map("is_active")
  createdAt       DateTime     @default(now()) @map("created_at")
  updatedAt       DateTime     @updatedAt @map("updated_at")
  userAccess      UserAccess[]

  @@map("roles")
}

model UserAccess {
  id             String       @id @default(uuid())
  userId         String       @map("user_id")
  roleCode       String?      @map("role_code")
  nodeId         String       @map("node_id")
  accessType     AccessType?  @map("access_type")
  accessCategory   UserCategory @map("user_category") @default(NODE)
  companyId      String       @map("company_id")
  isGlobalAccess Boolean      @default(false) @map("is_global_access")
  createdAt      DateTime     @default(now()) @map("created_at")
  updatedAt      DateTime     @updatedAt @map("updated_at")
  company        Company      @relation(fields: [companyId], references: [id])
  orgStructure   OrgStructure @relation(fields: [nodeId], references: [id])
  role           Roles?       @relation(fields: [roleCode], references: [roleCode])
  user           User         @relation(fields: [userId], references: [id])
  @@unique([userId, roleCode, companyId, nodeId])
  @@map("user_access")
}

model Workflow {
  id           String        @id @default(uuid())
  name         String
  alias        String
  nodeId       String        @map("node_id")
  module       String
  subModule    String        @map("sub_module")
  roleCode     String?       @map("role_code")
  companyId    String        @map("company_id")
  levelsHash   String        @map("levels_hash")
  orgStructure OrgStructure  @relation(fields: [nodeId], references: [id])
  company      Company       @relation(fields: [companyId], references: [id])

  workflowReqIds String[]      @default([]) @map("workflow_req_ids")
  levels       WorkflowLevel[]

  createdAt    DateTime      @default(now()) @map("created_at")
  updatedAt    DateTime      @updatedAt @map("updated_at")
  @@unique([companyId, nodeId, module, subModule, levelsHash])
  @@map("workflow")
}

model WorkflowApprover {
  id             String           @id @default(uuid())
  workflowId     String           @map("workflow_id")
  reqId          String           @map("req_id")
  reqTable       String           @map("req_table")
  level          Int
  approversList  Json
  mandatoryCount Int              @map("mandatory_count")
  status         OnboardingStatus @default(PENDING)
  createdAt      DateTime         @default(now()) @map("created_at")
  updatedAt      DateTime         @updatedAt @map("updated_at")

  @@map("workflow_approver")
}




model WorkflowLevel {
  id            String        @id @default(uuid())
  workflowId    String        @map("workflow_id")
  level         Int
  approver1     ApproverType
  approver2     ApproverType?
  approverType  ApprovalType  @map("approver_type")

  workflow      Workflow @relation(fields: [workflowId], references: [id])

  @@unique([workflowId, level])
  @@map("workflow_level")
}

model WorkflowReq {
  id                String           @id @default(uuid())
  companyId         String           @map("company_id")
  nodeId            String           @map("node_id")
  module            String
  subModule         String           @map("sub_module")
  levelsHash        String           @map("levels_hash")
  workflowId        String?          @map("workflow_id")

  data              Json
  status            OnboardingStatus @default(PENDING)
  approvalRemark    String?          @map("approval_remark")
  eligibleApprovers String[]         @default([]) @map("eligible_approvers")

  createdAt         DateTime         @default(now()) @map("created_at")
  updatedAt         DateTime         @updatedAt @map("updated_at")

  company           Company          @relation(fields: [companyId], references: [id])

  workflowHistories WorkflowReqHistory[] @relation("WorkflowRequestHistory")

  @@map("workflow_req")
}

model WorkflowReqHistory {
  id            String      @id @default(uuid())
  workflowReqId String      @map("workflow_req_id")
  companyId     String      @map("company_id")
  level         Int?
  event         EventType
  eventUserId   String      @map("event_user_id")
  createdAt     DateTime    @default(now()) @map("created_at")

  user        User        @relation("WorkflowHistoryRel", fields: [eventUserId], references: [id])
  workflowReq WorkflowReq @relation("WorkflowRequestHistory", fields: [workflowReqId], references: [id])
  company     Company     @relation("WorkflowRequestHistory", fields: [companyId], references: [id])

  @@map("workflow_req_history")
}



enum NodeType {
  ROOT
  DIVISION
  DEPARTMENT
  TEAM
  PLANT
  LOCATION
}

enum EventType {
  INITIATE
  APPROVED
  REJECTED
  MODIFY
}

enum Status {
  ACTIVE
  INACTIVE
}

enum OnboardingStatus {
  PENDING
  APPROVED
  REJECTED
}

enum OnboardedType {
  EXISTING
  NEW
}

enum ApproverType {
  GLOBAL_APPROVER
  REPORTING_MANAGER
  NODE_APPROVER
  HIERARCHY_APPROVER
}

enum ApprovalType {
  AND
  OR
}

enum AccessType{
  PRIMARY
  SECONDARY
}

enum UserCategory{
   ALL_CHILD
   IMMEDIATE_CHILD
   NODE
}